Batch ingredient filter building and add ZGC recommendation
Use addAll() batch path for initial ingredient loading instead of
per-ingredient add() calls. Add JEI-Async description and ZGC
performance recommendation to README.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>